--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-click==8.0.3
-beautifulsoup4==4.10.0
-requests==2.26.0
-selenium==4.6.0
-webdriver-manager==3.5.2
+click
+beautifulsoup4
+requests
+selenium
+webdriver-manager
